Update CORS configuration to specify allowed origins for development and production